--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,33 +1,30 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --black: #3b434e;
+  --gray-light: #ebebeb;
+  --white: #fff;
+  --primary: #7653fc;
+  --primary-hover: #4b29d4;
+  --red: #fc8360;
+  --green: #1dc37e;
+  --green-light: #c8f8e4;
+  --font-family: 'Noto Sans', serif;
 }
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
+  margin: 0;
+  padding: 0;
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  color: var(--black);
+  font-family: var(--font-family);
+
+  background-color: #f5f6f8;
 }
 
 * {
   box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 
 a {
@@ -35,8 +32,3 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
