--- a/src/components/Tag/Tag.module.css
+++ b/src/components/Tag/Tag.module.css
@@ -1,20 +1,54 @@
-.p {
-  margin: 0;
+.tag {
+  display: inline-block;
 
-  font-weight: 400;
+  box-sizing: border-box;
+  margin-right: 5px;
+
+  border-radius: 20px;
 }
 
-.base {
-  font-size: 16px;
-  line-height: 150%;
+.s {
+  padding: 5px 10px;
+
+  font-size: 12px;
+  line-height: 12px;
 }
 
-.small {
+.m {
+  padding: 5px 10px;
+
   font-size: 14px;
-  line-height: 171%;
+  line-height: 14px;
 }
 
-.medium {
-  font-size: 18px;
-  line-height: 161%;
+.ghost {
+  border: 1px solid var(--gray-light);
+}
+
+.red {
+  color: var(--white);
+  font-weight: bold;
+
+  background-color: #de0000;
+}
+
+.grey {
+  color: var(--white);
+  font-weight: bold;
+
+  background-color: #83c0d9;
+}
+
+.green {
+  color: var(--green);
+  font-weight: bold;
+
+  background-color: var(--gray-light);
+}
+
+.primary {
+  color: var(--primary);
+
+  background: none;
+  border: 1px solid var(--primary);
 }
